--- a/ElevationMaster.csproj
+++ b/ElevationMaster.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bus.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Sentence.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Program.cs" />
