--- a/ElevationMaster.csproj
+++ b/ElevationMaster.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AniPetOverride.cs" />
     <Compile Include="Bus.cs" />
+    <Compile Include="OverrideTest.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Sentence.cs" />
     <Compile Include="Student.cs" />
